--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ scikit_learn==1.3.0
 scipy==1.13.0
 spacy==3.5.3
 en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.5.0/en_core_web_md-3.5.0-py3-none-any.whl#sha256=b492fd2dfeee931dd60232fd1a122bb5c3542ebcd5d614f11844647050aa539e
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl#sha256=0964370218b7e1672a30ac50d72cdc6b16f7c867496f1d60925691188f4d2510
 spacy_langdetect==0.1.2
 streamlit==1.12.0
 tika==2.6.0
